tests/snapshots/render/iterm2@commonmark-spec-252-block_quotes.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/252-block_quotes.md
---
  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0m[3mcode[0m                                                                      [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

[90m▌ [0m[3mnot code[0m
