tests/snapshots/render/iterm2@commonmark-spec-253-list_items.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/253-list_items.md
snapshot_kind: text
---
A paragraph with two lines.

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mindented code[0m                                                               [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

[90m▌ [0m[3mA block quote.[0m
