tests/snapshots/render/iterm2@commonmark-spec-257-list_items.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/257-list_items.md
snapshot_kind: text
---
• one

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m two[0m                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
