tests/snapshots/render/iterm2@commonmark-spec-260-list_items.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/260-list_items.md
snapshot_kind: text
---
[90m▌ [0m[90m▌ [0m• [3mone[0m

[90m▌ [0m[90m▌ [0m[3mtwo[0m
