tests/snapshots/render/iterm2@commonmark-spec-264-list_items.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/264-list_items.md
---
• Foo

  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0mbar                                                                       [32m │[0m
  [32m│ [0m                                                                          [32m │[0m
  [32m│ [0m                                                                          [32m │[0m
  [32m│ [0mbaz                                                                       [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m
